# beerus-x

./: .gitignore  README.md  background.js  beerus-x.html  index.html  manifest.json  popup.js  style.css
.github/workflows/: check.yml
beerus-js/: Cargo.toml
